--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+main {
+    height: 100vh;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; Vertikal markaz */
+    overflow: hidden;
 }
 
 h1:focus {
@@ -21,7 +35,7 @@ a, .btn-link {
 }
 
 .content {
-    padding-top: 1.1rem;
+    padding-top: 0rem;
 }
 
 .valid.modified:not([type=checkbox]) {
@@ -100,4 +114,56 @@ a, .btn-link {
 
 code {
     color: #c02d76;
+}
+
+.shadowbox {
+    height: 93vh;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    border-radius: 10px;
+}
+
+.bg-img {
+    background-image: url("/imgs/moon.jpg");
+    height: 100%;
+    border-radius: 10px;
+}
+
+.headerbox {
+    border-radius: 10px;
+    background-color: rgb(223, 223, 223);
+    opacity: 0.95;
+}
+
+.text-oyat {
+    border-radius: 10px;
+    background-color: white !important;
+}
+
+.bodybox {
+    background-color: white;
+    border-radius: 10px;
+    opacity: 0.95;
+}
+
+.timebox {
+    border-radius: 10px;
+    background-color: #9ec8f5b7;
+}
+
+.highlight {
+    background-color: #51cf46; /* Pastel Red */
+    font-weight: bold;
+}
+
+@media (max-width: 576px) {
+    .custom-font-size {
+        font-size: 0.675rem; /* Kichikroq font */
+    }
+}
+
+@media (min-width: 577px) {
+    .custom-font-size {
+        font-size: 1rem; /* Standart font */
+    }
 }
