--- a/TaqvimBot/wwwroot/css/app.css
+++ b/TaqvimBot/wwwroot/css/app.css
@@ -124,7 +124,7 @@ code {
 }
 
 .bg-img {
-    background-image: url("https://i1.sndcdn.com/artworks-000008673760-37mowj-t500x500.jpg");
+    background-color: #121081;
     height: 100%;
     border-radius: 10px;
 }
