--- a/css/app.css
+++ b/css/app.css
@@ -124,7 +124,7 @@ code {
 }
 
 .bg-img {
-    background-color: #121081;
+    background-color: #0d0d2e;
     height: 100%;
     border-radius: 10px;
 }
